<?xml version="1.0" encoding="utf-8"?>
<navigation
	android:fitsSystemWindows="true"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/bottom_navigation"
	app:startDestination="@+id/navigation_home">
	
	<fragment
		android:id="@+id/navigation_home"
		android:name="com.group4.khoatritoan.k_it.ui.main.tab.home.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home" />
	
	<fragment
		android:id="@+id/navigation_log"
		android:name="com.group4.khoatritoan.k_it.ui.main.tab.log.LogFragment"
		android:label="@string/title_log"
		tools:layout="@layout/fragment_log" />
	
	<fragment
		android:id="@+id/navigation_profile"
		android:name="com.group4.khoatritoan.k_it.ui.main.tab.profile.ProfileFragment"
		android:label="@string/title_profile"
		tools:layout="@layout/fragment_profile" />
</navigation>