<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	
	<data>
		<import type="android.text.InputType" />
		<variable
			name="viewModel"
			type="com.group4.khoatritoan.k_it.ui.main.tab.logs.LogsViewModel" />
	</data>
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.main.tab.logs.LogsFragment">
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/tilStartDate"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginHorizontal="@dimen/margin_horizontal_parent"
			android:layout_marginTop="30dp"
			android:enabled="false"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/tietStartDate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:hint="@string/label_from"
				android:inputType="@{InputType.TYPE_NULL}"
				android:date="@{viewModel.startEndMilliseconds.first}" />
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/tilEndDate"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginHorizontal="@dimen/margin_horizontal_parent"
			android:layout_marginTop="@dimen/margin_between_text_input"
			android:enabled="false"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tilStartDate">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/tietEndDate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:hint="@string/label_to"
				android:inputType="@{InputType.TYPE_NULL}"
				android:date="@{viewModel.startEndMilliseconds.second}" />
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/btnSelectDate"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_marginHorizontal="@dimen/margin_horizontal_parent"
			android:layout_marginTop="10dp"
			android:text="@string/label_select_date"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tilEndDate" />
		
		<ToggleButton
			android:checked="@={viewModel.isNewest}"
			app:iconTint="@color/black"
			android:id="@+id/btnSort"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/margin_horizontal_parent"
			android:textOn="@string/label_newest"
			android:textOff="@string/label_oldest"
			android:button="@drawable/toggle"
			android:textColor="@color/black"
			android:background="@android:color/transparent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/btnSelectDate" />
		
		
		<com.google.android.material.button.MaterialButtonToggleGroup
			android:id="@+id/tgIsReceived"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/margin_horizontal_parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/btnSelectDate"
			app:selectionRequired="true"
			app:singleSelection="false">
			
			<Button
				android:id="@+id/btnTrue"
				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:text="✔"
				android:textColor="@color/safe" />
			
			<Button
				android:id="@+id/btnFalse"
				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:text="✖"
				android:textColor="@color/danger" />
		
		</com.google.android.material.button.MaterialButtonToggleGroup>
		
		<androidx.constraintlayout.widget.Barrier
			android:id="@+id/barrier1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:barrierDirection="bottom"
			app:constraint_referenced_ids="tgIsReceived, btnSort"
			tools:layout_editor_absoluteX="177dp"
			tools:layout_editor_absoluteY="405dp" />
		
		
		<View
			android:id="@+id/view_offset_helper"
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginHorizontal="@dimen/margin_horizontal_parent"
			android:layout_marginVertical="5dp"
			android:background="#E91E63"
			app:layout_constraintBottom_toTopOf="@id/rvNotifications"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/barrier1" />
		
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvNotifications"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="5dp"
			android:layout_marginHorizontal="@dimen/margin_horizontal_parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/view_offset_helper"
			app:layout_constraintVertical_bias="1.0">
		
		</androidx.recyclerview.widget.RecyclerView>
		
		<TextView
			android:id="@+id/tvNoNotification"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="@{viewModel.listNotifications.size == 0 ? 0 : 4}"
			android:textColor="@color/teal_200"
			android:textSize="@dimen/title_medium"
			android:text="@string/label_no_notification"
			app:layout_constraintBottom_toBottomOf="@+id/rvNotifications"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/rvNotifications"
			app:layout_constraintTop_toBottomOf="@+id/tgIsReceived" />
	
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>

