<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	
	<data>
		<variable
			name="viewModel"
			type="com.group4.khoatritoan.k_it.ui.forgot_password.ForgotPasswordViewModel" />
	</data>
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.forgot_password.ForgotPasswordActivity">
		
		<ImageView
			android:id="@+id/imageView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			app:layout_constraintBottom_toTopOf="@+id/tvResetPasswordLabel"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/bg_reset_password" />
		
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.3" />
		
		<TextView
			android:id="@+id/tvResetPasswordLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title_reset_password"
			android:textSize="@dimen/title_medium"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/guideline1" />
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/tilEmail"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			app:hintTextAppearance="@style/Theme.TextLabel"
			android:layout_width="0dp"
			android:layout_height="@dimen/height_text_input"
			android:layout_marginTop="20dp"
			android:layout_marginHorizontal="@dimen/margin_horizontal_parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tvResetPasswordLabel"
			app:layout_constraintStart_toStartOf="parent">
			
			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@={viewModel.email}"
				android:hint="@string/label_email"
				android:inputType="textEmailAddress"
				android:textSize="@dimen/text_size_text_input" />
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.button.MaterialButton
			app:icon="@drawable/ic_send_24"
			android:id="@+id/btnSend"
			android:onClick="@{viewModel::onSend}"
			android:textSize="@dimen/text_size_label"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:text="@string/label_send"
			android:layout_marginTop="10dp"
			android:padding="10dp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tilEmail"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>

